--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,9 +1,9 @@
---- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/David-pm-pl/PowerfulAdsFilter
+--- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/David-pm-pl/AdsFilter
 build-by-default: true
 branches:
 - stable
 projects:
-  PowerfulAdsFilter:
+  AdsFilter:
     path: ""
     icon: "assets/images/icon.png"
     lint:  
